# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_game/game/: brain_even.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_game/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
brain_games/game/: brain_calc.py  brain_even.py
brain_games/scripts/: brain_games.py  cli.py
scripts/: brain_games.py
