[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Саша Березин <attackofsnail@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_game"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_game.scripts.brain_games:main"
brain-even = "brain_game.scripts.brain_even:even"
brain-calc = "brain_game.scripts.brain_calc:calc"
brain-gcd = "brain_game.scripts.brain_gcd:gcd"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
